--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "freecodecamp tutorial ",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon app"
   },
