--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "oneofthedevs",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
