--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon app"
+    "start": "node app"
   },
   "author": "oneofthedevs",
   "license": "MIT",
