--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "moment": "^2.14.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
